Fix titles on mobile device in dark mode

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -52,9 +52,9 @@ a {
       background-color: #183d5d;
       border-left: #126b8a 5px solid;
     }
-    .container > header {
-      color: #269cc1;
-    }
+  }
+  .container>header {
+    color: #269cc1;
   }
   .content {
     background-color: #183d5d;
@@ -66,7 +66,7 @@ a {
   article+*, .post-body ~ section {
     border-color: #6d6060
   }
-  #sidebar .site-title a, #sidebar .site-title, #sidebar a, h2 {
+  #sidebar .site-title a, #sidebar .site-title, #sidebar a, h2, h3, h4 {
     color: #c3b6a2;
   }
   #sidebar a svg {
